--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('https://www.geckostickers.com.br/wp-content/uploads/2024/08/papel-de-parede-stitch-l-2-50x2-50-a-.webp');
+    background-image: url('img/4965007.jpg');
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
