--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 
 body {
+    background-color: #000000;
     font-size: 1rem;
     font-family: 'Montserrat';
 }
@@ -33,7 +34,6 @@ section {
     background-image: url('img/4965007.jpg');
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
-    background: #000000;
     background-position: right;
     border-radius: 80px;
     width: 100%;
